--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "manifest_version": 2,
   "name": "Timezoner",
   "description": "A Chrome App for Time Lords.",
   "version": "0.1",
@@ -14,5 +15,5 @@
       "js": ["main.js", "resources/js/jquery-ui.js", "resources/js/jquery-1.10.2.js"]
     }
   ],
-  "icons": { "16": "calculator-16.png", "128": "calculator-128.png" }
+  "icons": { "16": "timezoner-16.png", "128": "timezoner-128.png" }
 }
